# Advent_of_Code

./: .gitignore  .pre-commit-config.yaml  Queens.ipynb  README.md  day18.ipynb  day24.py  pyproject.toml
2015/: day14.ipynb  day15.ipynb
2019/: Day01.html  Day01.ipynb  Day02.html  Day02.ipynb  Day03.html  Day03.ipynb  Day04.html  Day04.ipynb  Day05.html  Day05.ipynb  Day06.html  Day06.ipynb  Day07.html  Day07.ipynb  Day08.html  Day08.ipynb  Day09.html  Day09.ipynb  Day10.html  Day10.ipynb  Day11.html  Day11.ipynb  Day12.html  Day12.ipynb  Day13.html  Day13.ipynb  Day14.html  Day14.ipynb  Day15.html  Day15.ipynb  Day16.html  Day16.ipynb  Day16pt2.ipynb  Day17.html  Day17.ipynb  Day18.html  Day18.ipynb  Day19.html  Day19.ipynb  Day20.html  (+10 more)
2020/: Day 01 - Report Repair.ipynb  Day 02 - Password Philosophy.ipynb  Day 03 - Toboggan Trajectory.ipynb  Day 04 - Passport Processing.ipynb  Day 05 - Binary Boarding.ipynb  Day 06 - Custom Customs.ipynb  Day 07 - Handy Haversacks.ipynb  Day 09 - Encoding Error.ipynb  Day 10 - Adapter Array.ipynb  Day 11 - Seating System.ipynb  Day 12 - Rain Risk.ipynb  Day 13 - Shuttle Search.ipynb  Day 15 - Rambunctious Recitation.ipynb  Day 16 - Ticket Translation.ipynb  Day 17 - Conway Cubes.ipynb  Day 18 - Operation Order.ipynb  Day 19 - Monster Messages.ipynb  Day 20 - Jurassic Jigsaw.ipynb  Day 22 - Crab Combat.ipynb  Day 23 - Crab Cups.ipynb  Day 24 - Lobby Layout.ipynb  Day 25 - Combo Breaker.ipynb  day01.html  day01.ipynb  day02.html  day02.ipynb  day03.html  day03.ipynb  day04.html  day04.ipynb  day05.html  day05.ipynb  day06.html  day06.ipynb  day07.ipynb  day08.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  (+6 more)
2021/: Day 01 - Sonar Sweep.ipynb  Day 02 - Dive.ipynb  Day 03 - Binary Diagnostic.ipynb  Day 04 - Giant Squid.ipynb  Day 05 - Hydrothermal Venture.ipynb  Day 06 - Lanternfish.ipynb  Day 07 - The Treachery of Whales.ipynb  Day 08 - Seven Segment Search.ipynb  Day 09 - Smoke Basin.ipynb  Day 10 - Syntax Scoring.ipynb  Day 11 - Dumbo Octopus.ipynb  Day 12 - Passage Pathing.ipynb  Day 13 - Transparent Origami.ipynb  Day 14 - Extended Polymerization.ipynb  Day 15 - Chiton.ipynb  Day 16 - Packet Decoder.ipynb  Day 17 - Trick Shot.ipynb  Day 18 - Snailfish.ipynb  Day 19 - Beacon Scanner.ipynb  Day 20 - Trench Map.ipynb  Day 21 - Dirac Dice.ipynb  Day 22 - Reactor Reboot.ipynb  Day 23 - Amphipod.ipynb  Day 24 - Arithmetic Logic Unit.ipynb  Day 25 - Sea Cucumber.ipynb
2022/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb  Day 10.ipynb  Day 11.ipynb  Day 12.ipynb  Day 13.ipynb  Day 14.ipynb  Day 15.ipynb  Day 16.ipynb  Day 17.ipynb
2023/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day14_example2.txt  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day20.ipynb  day20.py  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb
2024/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day19.ipynb  day20.ipynb  day21.ipynb  day22.ipynb  day23.ipynb  day24.ipynb  day25.ipynb
2025/: day01.ipynb  day02.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb
