[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Solutions to the Advent of Code"
authors = ["Martin Høy <marhoy@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pydantic = "^2.5.2"
pandas = "^2.1.0"
numpy = "^1.19.4"
scipy = "^1.11.4"
sympy = "^1.7.1"
matplotlib = "^3.5.0"
plotly = "^5.4.0"
loguru = "^0.7.0"
networkx = "^3.0"
portion = "^2.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Make isort compatible with black
[tool.isort]
profile = "black"

# Mypy configuration
[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

# Configuration of the pydantic mypy plugin
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
