[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Solutions to the Advent of Code"
authors = ["Martin Høy <marhoy@gmail.com>"]
package-mode = false                            # Dont' try to install our own code as a package

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pydantic = "^2.5.2"
pandas = "^2.1.0"
numpy = "^2.1"
scipy = "^1.14"
sympy = "^1.7.1"
matplotlib = "^3.5.0"
plotly = "^5.4.0"
loguru = "^0.7.0"
networkx = "^3.4"
portion = "^2.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Consider packages in the src directory as first-party code
src = ["src"]
# Run ruff on Notebooks as well
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
# Allow the use of assert in tests
"tests/*" = ["S101"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle
    "W",   # pycodestyle
    "I",   # isort
    "ICN", # flake8-import-conventions
    "D",   # pydocstyle
    "N",   # pep8-naming
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "PD",  # pandas-vet
    # "FAST", # FastAPI
]
ignore = [
    "ISC001", # may cause conflicts when used with the formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"


# mypy configuration, taken from pydantic documentation
[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
